<resources>
    <string name="app_name">HFK</string>
    <string name="app_full_name">Help For Kisan</string>
    <string name="login_type">Login type</string>
    <string name="login">Login</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_and_account_yet">Don\'t have and account yet?</string>
    <string name="create_account">Create Account</string>
    <string name="register_start">Register</string>
    <string name="first_name">First name</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="block">Block/ Sub- District</string>
    <string name="enter_block">Enter Block</string>
    <string name="landmark">Landmark</string>
    <string name="landmark_optional">Landmark (Optional)</string>
    <string name="village">Village</string>
    <string name="register">Register</string>
    <string name="state">State/ Division</string>
    <string name="user_type">User Type</string>
    <string name="select_state">Select State</string>
    <string name="enter_village">Enter Village</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="loading">Loading…</string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="empty_field_validation">Filed can\'t be empty</string>
    <string name="get_quote">Get Quote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_categories">Browse categories</string>
    <string name="see_all">See all</string>
    <string name="product_name">Product name</string>
    <string name="categories">Categories</string>
    <string name="additional_info">Additional information</string>
    <string name="continue_label">Continue</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="camera_runtime_permission"><![CDATA[In order to publish, you need to give HFK permissions to activate your device camera & photo gallery]]></string>
    <string name="select_quality">Select Quality</string>
    <string name="good">Good</string>
    <string name="better">Better</string>
    <string name="best">Best</string>
    <string name="video_link">Video link</string>
    <string name="select_price">Price</string>
    <string name="submit">Submit</string>
    <string name="select_category">Select category</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="select_image">Select Image</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="no_result_found">No results found</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="seller_details">Seller Details</string>
    <string name="view_profile">View Profile</string>
    <string name="buy_now">Buy now</string>
    <string name="chat">Chat</string>
    <string name="conformation_code">Conformation Code</string>
    <string name="please_otp_code">"Please enter the 4-digit code sent to your mobile "</string>
    <string name="confirm">Confirm</string>
    <string name="did_not_receive_the_code">Did not receive the code?</string>
    <string name="resend">Resend</string>
    <string name="empty_otp_validation">Please enter OTP</string>
    <string name="valid_otp_validation">Incorrect OTP</string>
    <string name="search_for_your_favourite_brands">Search for your favourite brands and items</string>
    <string name="search_field_validation">Search field can\'t be blank</string>
    <string name="search_field_min_chars_validation">Type atleast 3 characters to perform search</string>
    <string name="select_district">Select District</string>
    <string name="district">District</string>
    <string name="select_block">Select Block</string>
    <string name="category_unit">Category Unit</string>
    <string name="pulses">Pulses</string>
    <string name="fruits">Fruits</string>
    <string name="machinery">Machinery</string>
    <string name="select_unit">Select unit</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="machinery_parts">Machinery / Parts</string>
    <string name="new_label">New</string>
    <string name="old_label">Old</string>
    <string name="brand_name">Brand name</string>
    <string name="price">Price</string>
    <string name="others">Others</string>
    <string name="browse">Browse</string>
    <string name="address_type">Address Type</string>
    <string name="profile_address">Profile address</string>
    <string name="new_address">New address</string>
    <string name="name">Name</string>
    <string name="zipcode">Pin Code</string>
    <string name="sell_type">Sell Type</string>
    <string name="normal">Normal</string>
    <string name="quick">Quick</string>
    <string name="machinery_age">Machinery Age</string>
    <string name="Year">Years</string>
    <string name="number_of_owners">Number Of Owners</string>
    <string name="number_of_owners_colon">Number Of Owners: </string>
    <string name="upload_video">Upload Video</string>
    <string name="add_machinery">Add Machinery</string>
    <string name="edit_machinery">Edit Machinery</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="rupees_50">50 Rupees</string>
    <string name="rupees_100">100 Rupees</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="main_category">Main categories</string>
    <string name="crops">Crops</string>
    <string name="flowers">Flowers</string>
    <string name="my_order">My Order</string>
    <string name="my_notification">My Notification</string>
    <string name="my_product_list">My Product List</string>
    <string name="my_wishlist">My WishList</string>
    <string name="my_profile">My Profile</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="rate_write_review">Rate &amp; Write a Review</string>
    <string name="rate">Rate</string>
    <string name="write_your_review">Write a Review</string>
    <string name="write_your_message_here">Write here.</string>
    <string name="review_item">Review Item</string>
    <string name="rate_us">Rate Us</string>
    <string name="empty_review_validation">Please write some review.</string>
    <string name="empty_rating_validation">Please enter rating for your order.</string>
    <string name="market_value">Market Value</string>
    <string name="show_market_value">Show Market Value</string>
    <string name="select_product">Select Product</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="months">Months</string>
    <string name="apply">Apply</string>
    <string name="location_filter">Location Filter</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="pincode">Pincode</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="ssl_error_alert_msg">SSL error occurred. Would you like to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_policy">User Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="share_apk">Share HFK</string>
    <string name="logout">Logout</string>
    <string name="share">Share HFK</string>
    <string name="review">Review</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="mobile_format_validation">Please enter valid mobile format</string>
    <string name="chat_user_list">Chat User List</string>
    <string name="welcome_to">Welcome To</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_registered_mobile">Enter your mobile number that you registered with</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="delete">Delete</string>
    <string name="age_colon">"Age: "</string>
    <string name="related_products">Related Products</string>
    <string name="label_all">All</string>
    <string name="update">Update</string>
    <string name="deactivate_your_product">Deactivate your product</string>
    <string name="deactivate_product_alert_msg">Are you sure want to deactivate your product?</string>
    <string name="cancel">Cancel</string>
    <string name="deactivate">Deactivate</string>
    <string name="edit">Edit</string>
    <string name="edit_your_product">Edit your product</string>
    <string name="edit_product_alert_msg">If you have any mistake You can edit your product and Post Again</string>
    <string name="label_activate">Activate</string>
    <string name="label_deactivate">Deactivate</string>
    <string name="label_notification_preference">Notification Preference</string>
</resources>