<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_menu_header">
        <item
            android:id="@+id/navigation_item_my_order"
            android:checkable="true"
            android:title="@string/my_order"
            android:icon="@drawable/ic_my_order"
            android:visible="false"/>

        <item
            android:id="@+id/navigation_item_notification"
            android:checkable="true"
            android:title="@string/my_notification"
            android:icon="@drawable/ic_bell"/>

        <item
            android:id="@+id/navigation_item_notification_preference"
            android:checkable="true"
            android:title="@string/label_notification_preference"
            android:icon="@drawable/ic_notification_preference"/>

        <item
            android:id="@+id/navigation_item_my_product_list"
            android:checkable="true"
            android:title="@string/my_product_list"
            android:icon="@drawable/ic_my_order"/>

        <item
            android:id="@+id/navigation_item_wishlist"
            android:checkable="true"
            android:title="@string/my_wishlist"
            android:icon="@drawable/ic_wishlist_unselected"/>

        <item
            android:id="@+id/navigation_item_market_view"
            android:checkable="true"
            android:title="@string/market_value"
            android:icon="@drawable/ic_my_order"/>
    </group>

    <group android:id="@+id/nav_menu_footer">
        <item
            android:id="@+id/navigation_item_tc"
            android:checkable="true"
            android:title="@string/terms_amp_conditions"
            android:icon="@drawable/ic_help"/>

        <item
            android:id="@+id/navigation_item_privacy_policy"
            android:checkable="true"
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_shield"/>

        <item
            android:id="@+id/navigation_item_user_policy"
            android:checkable="true"
            android:title="@string/user_policy"
            android:icon="@drawable/ic_user_manual"/>

        <item
            android:id="@+id/navigation_item_share_apk"
            android:checkable="true"
            android:title="@string/share_apk"
            android:icon="@drawable/ic_share"/>

        <item
            android:id="@+id/navigation_item_logout"
            android:checkable="true"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>