<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_categoryListRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.category_list.CategoryListActivity">

        <include
            android:id="@+id/toolbar_search"
            layout="@layout/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_masterCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:visibility="gone"
            android:background="@color/white_smoke"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_search"/>

        <LinearLayout
            android:id="@+id/ll_mainCategoryHolder"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:orientation="horizontal"
            android:background="@drawable/drawable_master_category_bg"
            android:minHeight="@dimen/_48sdp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_search">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pulses"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/drawable_master_category_fg"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/crops"
                android:textColor="@color/midnight_express"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fruits"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/fruits"
                android:textColor="@color/midnight_express"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_flowers"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/flowers"
                android:textColor="@color/midnight_express"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_machinery"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/machinery"
                android:textColor="@color/midnight_express"
                android:textSize="@dimen/_11ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_others"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/others"
                android:textColor="@color/midnight_express"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_mainCategoryHolder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/lato_medium"
            android:gravity="center"
            android:text="@string/no_result_found"
            android:textColor="@color/midnight_express"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>