<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_verifyOtpRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.verify_otp.VerifyOtpActivity">

        <LinearLayout
            android:id="@+id/ll_verifyOtpHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_conformationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:singleLine="true"
                android:text="@string/conformation_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_19ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_enterOtpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_otp_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <com.mukesh.OtpView
                android:id="@+id/tv_inputOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_medium"
                android:inputType="number"
                android:itemBackground="@color/gray_goose"
                android:maxLines="1"
                android:textColor="@color/black"
                app:OtpItemCount="4"
                app:OtpItemSpacing="@dimen/_4sdp"
                app:OtpState_filled="true"
                app:OtpViewType="rectangle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/drawable_curved_solid_primary"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:id="@+id/ll_resendOtpHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_resendOtpLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:singleLine="true"
                    android:text="@string/did_not_receive_the_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

                <com.esoftwere.hfk.custom_view.LinkTextView
                    android:id="@+id/tv_resendLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:clickable="false"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/resend"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="in 59 Sec"
                    android:textColor="@color/payne_grey"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>